--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "thunder:clean": "cd thunder && sh scripts/clean.sh && cd -",
     "thunder:prepare": "npm run thunder:clean && cd thunder && sh scripts/prepare.sh && cd -",
     "thunder:setup": "cd thunder && sh scripts/setup.sh && cd -",
-    "native:configure": "cmake-js reconfigure --directory src/c++/sdk --CDTHUNDER_ROOT_PATH=${PWD}/thunder",
-    "native:compile": "cmake-js compile --directory src/c++/sdk"
+    "native:configure": "cmake-js reconfigure --directory src/c++/sdk --CDTHUNDER_INSTALL_PATH=${SYSROOT_INSTALL_PATH} --CDCMAKE_PREFIX_PATH=${SYSROOT_INSTALL_PATH}/usr/lib/cmake --CDCMAKE_INSTALL_PREFIX=${SYSROOT_INSTALL_PATH}/usr --CDENABLE_TESTS=${ENABLE_TESTS} --CDOPENRPC_CONFIG_FILE=~/config.json",
+    "native:compile": "cmake-js build --directory src/c++/sdk",
+    "native:install": "NODE_INSTALL_PATH=openrpc NATIVE_LIB_NAME=OpenRPCNativeSDK NATIVE_LIB_VERSION=1.0.0 node src/c++/sdk/scripts/install.js",
+    "native:setup": "npm run native:configure && npm run native:compile && npm run native:install"
   },
   "repository": {
     "type": "git",
@@ -43,6 +45,7 @@
     "@semantic-release/npm": "^9.0.1",
     "husky": "^8.0.1",
     "jest": "^27.3.1",
+    "mkdirp": "^1.0.4",
     "semantic-release": "^19.0.5"
   },
   "keywords": [
@@ -55,14 +58,15 @@
     "ajv": "^8.3.0",
     "ajv-formats": "^2.1.0",
     "array.prototype.groupby": "^1.1.0",
+    "cmake-js": "^7.0.0",
     "crocks": "^0.12.4",
     "deepmerge": "^4.2.2",
+    "fs": "^0.0.1-security",
     "fs-extra": "^10.1.0",
     "highland": "^2.13.5",
     "mkdirp": "^0.5.6",
     "node-fetch": "^3.2.10",
     "nopt": "^5.0.0",
-    "util": "^0.12.4",
-    "cmake-js": "^7.0.0"
+    "util": "^0.12.4"
   }
 }
