--- a/src/c++/sdk/Tests/CMakeLists.txt
+++ b/src/c++/sdk/Tests/CMakeLists.txt
@@ -1,32 +1,33 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(Transport)
+project(OpenRPCTests)
+project_version(1.0.0)
 
 set(TARGET ${PROJECT_NAME})
 
 message("Setup ${TARGET} v${PROJECT_VERSION}")
 
-
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 find_package(${NAMESPACE}Core CONFIG REQUIRED)
-find_package(${NAMESPACE}COM CONFIG REQUIRED)
-find_package(${NAMESPACE}WebSocket CONFIG REQUIRED)
 
-add_library(${TARGET} OBJECT Transport.cpp)
+add_library(${TARGET} STATIC OpenRPCTests.cpp)
 
-find_package(${NAMESPACE}Core CONFIG REQUIRED)
 target_link_libraries(${TARGET}
     PUBLIC
         ${NAMESPACE}Core::${NAMESPACE}Core
+        OpenRPCNativeSDK
 )
+
 target_include_directories(${TARGET}
     PRIVATE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../>
 )
+
 set_target_properties(${TARGET} PROPERTIES
     CXX_STANDARD 11
     CXX_STANDARD_REQUIRED YES
-    VERSION ${PROJECT_VERSION}
-    SOVERSION ${PROJECT_VERSION_MAJOR}
+    LINK_WHAT_YOU_USE TRUE
+    FRAMEWORK FALSE
 )
 
+add_subdirectory(App)
