--- a/src/native/sdk/Tests/App/CMakeLists.txt
+++ b/src/native/sdk/Tests/App/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(OpenRPCTestApp)
+project(FireboltSDKTestApp)
 project_version(1.0.0)
 
 set(TARGET ${PROJECT_NAME})
@@ -8,14 +8,14 @@ set(TARGET ${PROJECT_NAME})
 message("Setup ${TARGET} v${PROJECT_VERSION}")
 find_package(${NAMESPACE}Core CONFIG REQUIRED)
 
-add_executable(${TARGET} OpenRPCTestsMain.cpp Module.cpp)
+add_executable(${TARGET} FireboltSDKTestsMain.cpp Module.cpp)
 
 target_link_libraries(${TARGET}
     PRIVATE
-       OpenRPCTests
+       FireboltSDKTests
     PUBLIC
        ${NAMESPACE}Core::${NAMESPACE}Core
-       OpenRPCNativeSDK
+       FireboltSDK
 )
 
 target_include_directories(${TARGET}
