--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "thunder:clean": "cd thunder && sh scripts/clean.sh && cd -",
     "thunder:prepare": "npm run thunder:clean && cd thunder && sh scripts/prepare.sh && cd -",
     "thunder:setup": "cd thunder && sh scripts/setup.sh && cd -",
-    "native:configure": "cmake-js reconfigure --directory src/c++/sdk --CDTHUNDER_INSTALL_PATH=${SYSROOT_INSTALL_PATH} --CDCMAKE_PREFIX_PATH=${SYSROOT_INSTALL_PATH}/usr/lib/cmake --CDCMAKE_INSTALL_PREFIX=${SYSROOT_INSTALL_PATH}/usr --CDENABLE_TESTS=${ENABLE_TESTS} --CDOPENRPC_CONFIG_FILE=~/config.json",
-    "native:compile": "cmake-js build --directory src/c++/sdk",
-    "native:install": "NODE_INSTALL_PATH=openrpc NATIVE_LIB_NAME=OpenRPCNativeSDK NATIVE_LIB_VERSION=1.0.0 node src/c++/sdk/scripts/install.js",
+    "native:configure": "cmake-js reconfigure --directory src/native/sdk --CDTHUNDER_INSTALL_PATH=${SYSROOT_INSTALL_PATH} --CDCMAKE_PREFIX_PATH=${SYSROOT_INSTALL_PATH}/usr/lib/cmake --CDCMAKE_INSTALL_PREFIX=${SYSROOT_INSTALL_PATH}/usr --CDENABLE_TESTS=${ENABLE_TESTS} --CDFIREBOLT_SERVER_URL=${FIREBOLT_SERVER_URL}",
+    "native:compile": "cmake-js build --directory src/native/sdk",
+    "native:install": "NODE_INSTALL_PATH=firebolt NATIVE_LIB_NAME=FireboltSDK NATIVE_LIB_VERSION=1.0.0 node src/native/sdk/scripts/install.js",
     "native:setup": "npm run native:configure && npm run native:compile && npm run native:install"
   },
   "repository": {
