--- a/src/native/sdk/CMakeLists.txt
+++ b/src/native/sdk/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-#set(THUNDER__PATH "/home/haseenasainul/thunder-repos/firebolt/firebolt-openrpc/thunder")
-#set(CMAKE_PREFIX_PATH "${THUNDER_INSTALL_PATH}/usr/lib/cmake")
+set(FIREBOLT_TRANSPORT_WAITTIME 1000 CACHE STRING "Maximum time to wait for Transport layer to get response")
 option(ENABLE_TESTS "Build openrpc native test" OFF)
 
 list(APPEND CMAKE_MODULE_PATH
@@ -9,20 +8,18 @@ list(APPEND CMAKE_MODULE_PATH
 	"${THUNDER_INSTALL_PATH}/tools/cmake")
 find_package(WPEFramework)
 
-project(OpenRPCNativeSDK)
+project(FireboltSDK)
 project_version(1.0.0)
 set(TARGET ${PROJECT_NAME})
 message("Setup ${TARGET} v${PROJECT_VERSION}")
 
-add_subdirectory(Transport)
-add_subdirectory(Properties)
-add_subdirectory(Services)
 add_library(${TARGET} SHARED
-    $<TARGET_OBJECTS:Transport>
-    $<TARGET_OBJECTS:Services>
-    $<TARGET_OBJECTS:Properties>
+    Transport/Transport.cpp
+    Accessor/Accessor.cpp
+    Properties/Event.cpp
     Module.cpp)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 find_package(${NAMESPACE}Core CONFIG REQUIRED)
 find_package(${NAMESPACE}COM CONFIG REQUIRED)
 find_package(${NAMESPACE}WebSocket CONFIG REQUIRED)
@@ -31,6 +28,11 @@ target_link_libraries(${TARGET}
         ${NAMESPACE}COM::${NAMESPACE}COM
         ${NAMESPACE}Core::${NAMESPACE}Core
         ${NAMESPACE}WebSocket::${NAMESPACE}WebSocket
+)
+
+target_include_directories(${TARGET}
+    PRIVATE
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
 )
 
 set_target_properties(${TARGET} PROPERTIES
@@ -54,5 +56,5 @@ install(
     INCLUDES DESTINATION include/openrpc
 )
 
-InstallPackageConfig(TARGETS ${TARGET} DESCRIPTION "OpenRPCNative SDK Library")
+InstallPackageConfig(TARGETS ${TARGET} DESCRIPTION "Firebolt SDK Library")
 include(Config.cmake)
