--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "prepare": "npm run prepare:setup && npm run dist",
     "prepare:setup": "npx mkdirp ./dist/docs ./build/docs/markdown ./build/docs/wiki ./build/sdk/javascript/src",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.json --detectOpenHandles",
-    "build": "npm run validate && npm run build:docs && npm run build:sdk",
+    "build": "npm run validate && npm run build:docs && npm run build:jssdk && npm run build:cppsdk",
     "validate": "node ./src/cli.mjs --task validate --source ./src --shared-schemas test/sharedSchemas && npm run build:openrpc && node ./src/cli.mjs --task validate --source ./build/sdk-open-rpc.json --shared-schemas test/sharedSchemas",
     "build:openrpc": "node ./src/cli.mjs --task openrpc --source ./src --template ./src/template/openrpc/template.json --output ./build/sdk-open-rpc.json --shared-schemas test/sharedSchemas",
-    "build:sdk": "node ./src/cli.mjs --task sdk --source ./src/ --template ./src/local/template/js --output ./build/sdk/javascript/src --shared-schemas test/sharedSchemas",
+    "build:jssdk": "node ./src/cli.mjs --task sdk --lang javascript --source ./src/ --template ./src/local/template/js --output ./build/sdk/javascript/src --shared-schemas test/sharedSchemas",
+    "build:cppsdk": "node ./src/cli.mjs --task sdk --lang cpp --source ./src/ --output ./build/sdk/cpp/ --shared-schemas test/sharedSchemas",
     "build:docs": "node ./src/cli.mjs --task docs --source ./src/ --template ./src/template/markdown --output ./build/docs/markdown --shared-schemas test/sharedSchemas --as-path",
     "build:wiki": "node ./src/cli.mjs --task docs --source ./src/ --template ./src/template/markdown --output ./build/docs/wiki --shared-schemas test/sharedSchemas",
-    "dist": "npm run validate && npm run build:sdk && npm run build:docs && npm run test"
+    "dist": "npm run validate && npm run build:jssdk && npm run build:cppsdk && npm run build:docs && npm run test"
   },
   "repository": {
     "type": "git",
