--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "thunder:clean": "cd thunder && sh scripts/clean.sh && cd -",
     "thunder:prepare": "npm run thunder:clean && cd thunder && sh scripts/prepare.sh && cd -",
     "thunder:setup": "cd thunder && sh scripts/setup.sh && cd -",
-    "native:prepare":"node ./src/cli.mjs --task sdk --lang native --source ./src/ --output ./build/sdk/native/ --shared-schemas test/sharedSchemas",
-    "native:configure": "cmake-js reconfigure --directory src/native --CDSYSROOT_PATH=${SYSROOT_PATH} --CDGENERATED_CODE_PATH=./build/sdk/native --CDCMAKE_INSTALL_PREFIX=${SYSROOT_PATH}/usr --CDENABLE_TESTS=${ENABLE_TESTS} --CDFIREBOLT_SERVER_URL=${FIREBOLT_SERVER_URL}",
-    "native:compile": "cmake-js build --directory src/native",
-    "native:setup": "npm run native:configure && npm run native:compile",
-    "native:install": "NODE_INSTALL_PATH=${SYSROOT_PATH} TARGET_NAME=Firebolt node src/native/scripts/install.js",
-    "build:nativesdk":"npm run native:prepare && npm run native:setup && npm run native:install"
+    "build:csdk":"node ./src/cli.mjs --task sdk --lang native-c --source ./src/ --output ./build/sdk/native-c/ --shared-schemas test/sharedSchemas",
+    "nativesdk:prepare":"npm run build:csdk",
+    "nativesdk:configure": "cmake-js reconfigure --directory src/native --CDSYSROOT_PATH=${SYSROOT_PATH} --CDGENERATED_CODE_PATH=./build/sdk/native-c --CDCMAKE_INSTALL_PREFIX=${SYSROOT_PATH}/usr --CDENABLE_TESTS=${ENABLE_TESTS} --CDFIREBOLT_SERVER_URL=${FIREBOLT_SERVER_URL}",
+    "nativesdk:compile": "cmake-js build --directory src/native",
+    "nativesdk:setup": "npm run nativesdk:configure && npm run nativesdk:compile",
+    "nativesdk:install": "NODE_INSTALL_PATH=${SYSROOT_PATH} TARGET_NAME=Firebolt node src/native/scripts/install.js",
+    "build:nativesdk":"npm run nativesdk:prepare && npm run nativesdk:setup && npm run nativesdk:install"
   },
   "repository": {
     "type": "git",
