--- a/src/native/test/CMakeLists.txt
+++ b/src/native/test/CMakeLists.txt
@@ -1,3 +1,19 @@
+# Copyright 2023 Comcast Cable Communications Management, LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
+
 cmake_minimum_required(VERSION 3.3)
 
 project(FireboltSDKTests)
@@ -42,4 +58,29 @@ InstallCMakeConfigs(TARGET ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
 InstallHeaders(TARGET ${TARGET} HEADERS . NAMESPACE ${FIREBOLT_NAMESPACE} DESTINATION FireboltTest)
 InstallLibraries(TARGET ${TARGET} LIBRARIES ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
 
-add_subdirectory(App)
+set(TESTAPP "FireboltSDKTestApp")
+
+message("Setup ${TESTAPP}")
+
+add_executable(${TESTAPP} FireboltSDKTestsMain.c)
+
+target_link_libraries(${TESTAPP}
+    PRIVATE
+       FireboltSDKTests
+)
+
+target_include_directories(${TESTAPP}
+    PRIVATE
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../>
+)
+
+add_custom_command(
+    TARGET ${TESTAPP}
+    POST_BUILD
+    COMMENT "=================== Installing TestApp ======================"
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/${FIREBOLT_NAMESPACE}/usr/bin
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/${TESTAPP} ${CMAKE_BINARY_DIR}/${FIREBOLT_NAMESPACE}/usr/bin
+)
+
+#add_subdirectory(App)
