--- a/src/native/src/CMakeLists.txt
+++ b/src/native/src/CMakeLists.txt
@@ -61,20 +61,20 @@ install(
         INCLUDES DESTINATION include/${FIREBOLT_NAMESPACE} # headers
 )
 
-set(PUBLIC_HEADERS
-    .
-    Accessor
-    Event
-    Logger
-    Properties
-    Transport
+InstallHeaders(
+    TARGET ${TARGET}
+    HEADERS .
+    NAMESPACE ${FIREBOLT_NAMESPACE}
+    DESTINATION ${FIREBOLT_NAMESPACE}
 )
 
 InstallHeaders(
     TARGET ${TARGET}
-    HEADERS ${PUBLIC_HEADERS}
+    EXCLUDE_ROOT_DIR
+    HEADERS .
     NAMESPACE ${FIREBOLT_NAMESPACE}
-    DESTINATION ${FIREBOLT_NAMESPACE}
+    SOURCE ${OPENRPC_ROOT}/${GENERATED_CODE_PATH}/include
+    DESTINATION ${FIREBOLT_NAMESPACE}/generated
 )
 InstallLibraries(TARGET ${TARGET} SHARED LIBRARIES ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
 InstallCMakeConfig(TARGETS ${TARGET})
