--- a/src/native/src/CMakeLists.txt
+++ b/src/native/src/CMakeLists.txt
@@ -31,8 +31,8 @@ add_library(${TARGET} SHARED
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 find_package(${NAMESPACE}Core CONFIG REQUIRED)
-find_package(${NAMESPACE}COM CONFIG REQUIRED)
 find_package(${NAMESPACE}WebSocket CONFIG REQUIRED)
+
 target_link_libraries(${TARGET}
     PUBLIC
         ${NAMESPACE}Core::${NAMESPACE}Core
@@ -73,7 +73,7 @@ InstallHeaders(
     EXCLUDE_ROOT_DIR
     HEADERS .
     NAMESPACE ${FIREBOLT_NAMESPACE}
-    SOURCE ${OPENRPC_ROOT}/${GENERATED_CODE_PATH}/include
+    SOURCE ${GENERATED_CODE_PATH}/include
     DESTINATION ${FIREBOLT_NAMESPACE}/generated
 )
 InstallLibraries(TARGET ${TARGET} SHARED LIBRARIES ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
