--- a/src/native/CMakeLists.txt
+++ b/src/native/CMakeLists.txt
@@ -23,15 +23,18 @@ set(FIREBOLT_LOGLEVEL "Info" CACHE STRING  "Log level to be enabled")
 
 option(ENABLE_TESTS "Build openrpc native test" OFF)
 
+if (NOT SYSROOT_PATH)
+    # Set sysroot and install prefix to support PC builds, sysroot_path not configured case
+    set(SYSROOT_PATH "${CMAKE_SOURCE_DIR}/../../firebolt")
+    set(CMAKE_INSTALL_PREFIX "${SYSROOT_PATH}/usr")
+    set(CMAKE_PREFIX_PATH ${SYSROOT_PATH}/usr/lib/cmake CACHE INTERNAL "" FORCE)
+endif()
+
 list(APPEND CMAKE_MODULE_PATH
         "${CMAKE_SOURCE_DIR}/cmake"
         "${SYSROOT_PATH}/usr/lib/cmake"
         "${SYSROOT_PATH}/tools/cmake")
 include(HelperFunctions)
-
-if (NOT DEFINED CMAKE_PREFIX_PATH)
-    set(CMAKE_PREFIX_PATH ${SYSROOT_PATH}/usr/lib/cmake CACHE INTERNAL "" FORCE)
-endif()
 
 set(FIREBOLT_NAMESPACE ${PROJECT_NAME} CACHE STRING "Namespace of the project")
 
