--- a/src/native/src/CMakeLists.txt
+++ b/src/native/src/CMakeLists.txt
@@ -45,6 +45,7 @@ target_link_libraries(${TARGET}
 target_include_directories(${TARGET}
     PRIVATE
         $<BUILD_INTERFACE:${GENERATED_CODE_PATH}/include>
+        $<BUILD_INTERFACE:${GENERATED_CODE_PATH}/src>
         $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
 )
