--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "build:docs": "node ./src/cli.mjs --task docs --source ./src/ --template ./src/template/markdown --output ./build/docs/markdown --shared-schemas test/sharedSchemas --as-path",
     "build:wiki": "node ./src/cli.mjs --task docs --source ./src/ --template ./src/template/markdown --output ./build/docs/wiki --shared-schemas test/sharedSchemas",
     "dist": "npm run validate && npm run build:jssdk && npm run build:nativesdk && npm run build:docs && npm run test",
-    "thunder:clean": "cd thunder && sh scripts/clean.sh && cd -",
-    "thunder:prepare": "npm run thunder:clean && cd thunder && sh scripts/prepare.sh && cd -",
-    "thunder:setup": "cd thunder && sh scripts/setup.sh && cd -",
+    "thunder:clean": "cd src/native-c/thunder && sh scripts/clean.sh && cd -",
+    "thunder:prepare": "npm run thunder:clean && cd src/native-c/thunder && sh scripts/prepare.sh && cd -",
+    "thunder:setup": "cd src/native-c/thunder && sh scripts/setup.sh && cd -",
     "build:csdk": "node ./src/cli.mjs --task sdk --lang native-c --source ./src/ --output ./build/sdk/native-c/ --shared-schemas test/sharedSchemas",
-    "nativesdk:prepare": "npm run build:csdk",
-    "nativesdk:configure": "cmake-js reconfigure --directory src/native --CDSYSROOT_PATH=${SYSROOT_PATH} --CDGENERATED_CODE_PATH=${PWD}/build/sdk/native-c --CDENABLE_TESTS=${ENABLE_TESTS} --CDFIREBOLT_SERVER_URL=${FIREBOLT_SERVER_URL}",
-    "nativesdk:compile": "cmake-js build --directory src/native",
+    "nativesdk:prepare": "npm run thunder:prepare && npm run thunder:setup && npm run build:csdk",
+    "nativesdk:configure": "cmake-js reconfigure --directory src/native-c --CDSYSROOT_PATH=${SYSROOT_PATH} --CDGENERATED_CODE_PATH=${PWD}/build/sdk/native-c --CDENABLE_TESTS=${ENABLE_TESTS} --CDFIREBOLT_SERVER_URL=${FIREBOLT_SERVER_URL}",
+    "nativesdk:compile": "cmake-js build --directory src/native-c",
     "nativesdk:setup": "npm run nativesdk:configure && npm run nativesdk:compile",
-    "nativesdk:install": "NODE_INSTALL_PATH=${SYSROOT_PATH} TARGET_NAME=Firebolt node src/native/scripts/install.js",
+    "nativesdk:install": "NODE_INSTALL_PATH=${SYSROOT_PATH} TARGET_NAME=Firebolt node src/native-c/scripts/install.js",
     "build:nativesdk": "npm run nativesdk:prepare && npm run nativesdk:setup && npm run nativesdk:install"
   },
   "repository": {
