--- a/src/native-c/cmake/project.cmake.in
+++ b/src/native-c/cmake/project.cmake.in
@@ -21,6 +21,7 @@ list(APPEND CMAKE_MODULE_PATH
         "${CMAKE_SOURCE_DIR}/cmake"
         "${SYSROOT_PATH}/usr/lib/cmake"
         "${SYSROOT_PATH}/usr/lib/cmake/Firebolt"
+        "${SYSROOT_PATH}/usr/lib/cmake/${NAMESPACE}/modules"
         "${SYSROOT_PATH}/tools/cmake")
 
 if (NOT DEFINED CMAKE_PREFIX_PATH)
