install sdk support added

--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "build:jssdk": "node ./src/cli.mjs --task sdk --lang javascript --source ./src/ --template ./src/local/template/js --output ./build/sdk/javascript/src --shared-schemas test/sharedSchemas",
     "build:docs": "node ./src/cli.mjs --task docs --source ./src/ --template ./src/template/markdown --output ./build/docs/markdown --shared-schemas test/sharedSchemas --as-path",
     "build:wiki": "node ./src/cli.mjs --task docs --source ./src/ --template ./src/template/markdown --output ./build/docs/wiki --shared-schemas test/sharedSchemas",
-    "dist": "npm run validate && npm run build:jssdk && npm run build:nativesdk && npm run build:docs && npm run test",
+    "dist": "npm run validate && npm run build:jssdk && npm run build:csdk && npm run build:docs && npm run test && npm run nativesdk:installsdk",
     "thunder:clean": "cd src/native-c/thunder && sh scripts/clean.sh && cd -",
-    "thunder:prepare": "npm run thunder:clean && cd src/native-c/thunder && sh scripts/prepare.sh -b 09e9f18c75c3bf2860296edb6e51f415f7a6093f -t 2f3cff3b647a9a37b595fb1602d2808ab81b5cef && cd -",
-    "thunder:prepare-r2": "npm run thunder:clean && cd src/native-c/thunder && sh scripts/prepare.sh -b R2 && cd -",
+    "thunder:prepare-r4": "npm run thunder:clean && cd src/native-c/thunder && sh scripts/prepare.sh -b 09e9f18c75c3bf2860296edb6e51f415f7a6093f -t 2f3cff3b647a9a37b595fb1602d2808ab81b5cef && cd -",
+    "thunder:prepare": "npm run thunder:clean && cd src/native-c/thunder && sh scripts/prepare.sh -b R2 && cd -",
     "thunder:setup": "cd src/native-c/thunder && sh scripts/setup.sh && cd -",
-    "build:csdk": "rm -rf ./build/sdk/native-c && node ./src/cli.mjs --task sdk --lang native-c --source ./src/ --output ./build/sdk/native-c/ --shared-schemas test/sharedSchemas",
+    "build:csdk": "rm -rf ./build/sdk/native-c/generated && node ./src/cli.mjs --task sdk --lang native-c --source ./src/ --output ./build/sdk/native-c/generated --shared-schemas test/sharedSchemas",
     "nativesdk:prepare": "npm run thunder:prepare && npm run thunder:setup && npm run build:csdk",
-    "nativesdk:configure": "cmake-js reconfigure --directory src/native-c --CDSYSROOT_PATH=${SYSROOT_PATH} --CDGENERATED_CODE_PATH=${PWD}/build/sdk/native-c --CDENABLE_TESTS=${ENABLE_TESTS}",
+    "nativesdk:configure": "cmake-js reconfigure --directory src/native-c --CDSYSROOT_PATH=${SYSROOT_PATH} --CDGENERATED_CODE_PATH=${PWD}/build/sdk/native-c/generated --CDENABLE_TESTS=${ENABLE_TESTS} --CDLIBDIR=Release",
     "nativesdk:compile": "cmake-js build --directory src/native-c",
     "nativesdk:setup": "npm run nativesdk:configure && npm run nativesdk:compile",
     "nativesdk:install": "NODE_INSTALL_PATH=${SYSROOT_PATH} TARGET_NAME=Firebolt node src/native-c/scripts/install.js",
-    "build:nativesdk": "npm run nativesdk:prepare && npm run nativesdk:setup && npm run nativesdk:install"
+    "build:nativesdk": "npm run nativesdk:prepare && npm run nativesdk:setup && npm run nativesdk:install",
+    "nativesdk:installsdk": "sh src/native-c/scripts/installsdk.sh"
   },
   "repository": {
     "type": "git",
