--- a/src/native-c/src/CMakeLists.txt
+++ b/src/native-c/src/CMakeLists.txt
@@ -22,6 +22,10 @@ set(TARGET ${PROJECT_NAME})
 message("Setup ${TARGET} v${PROJECT_VERSION}")
 file(GLOB GENERATED_SOURCES "${GENERATED_CODE_PATH}/src/*.cpp")
 
+if (NOT LIBDIR)
+    set(LIBDIR "src")
+endif()
+
 add_library(${TARGET} ${FIREBOLT_LIBRARY_TYPE}
     Types.cpp
     Module.cpp
@@ -70,7 +74,7 @@ InstallHeaders(TARGET ${TARGET} EXCLUDE_ROOT_DIR HEADERS . NAMESPACE ${FIREBOLT_
 InstallHeaders(TARGET ${TARGET} HEADERS . NAMESPACE ${FIREBOLT_NAMESPACE}
     SOURCE ${CMAKE_SOURCE_DIR}/include DESTINATION ${FIREBOLT_NAMESPACE})
 
-InstallLibraries(TARGET ${TARGET} ${FIREBOLT_LIBRARY_TYPE} LIBRARIES ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
+InstallLibraries(TARGET ${TARGET} ${FIREBOLT_LIBRARY_TYPE} LIBDIR ${LIBDIR} LIBRARIES ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
 InstallCMakeConfig(TARGETS ${TARGET})
 InstallPackageConfig(TARGETS ${TARGET} DESCRIPTION "Firebolt SDK Library")
 InstallCMakeConfigs(TARGET ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
