Changes to build it release folder

--- a/src/native-c/CMakeLists.txt
+++ b/src/native-c/CMakeLists.txt
@@ -57,5 +57,5 @@ endif()
 
 # make sure others can make use cmake settings of Firebolt OpenRPC
 configure_file( "${CMAKE_SOURCE_DIR}/cmake/project.cmake.in"
-        "${CMAKE_CURRENT_BINARY_DIR}/${FIREBOLT_NAMESPACE}Config.cmake"
+        "${CMAKE_BINARY_DIR}/${FIREBOLT_NAMESPACE}Config.cmake"
     @ONLY)
