--- a/src/native-c/src/CMakeLists.txt
+++ b/src/native-c/src/CMakeLists.txt
@@ -22,10 +22,6 @@ set(TARGET ${PROJECT_NAME})
 message("Setup ${TARGET} v${PROJECT_VERSION}")
 file(GLOB GENERATED_SOURCES "${GENERATED_CODE_PATH}/src/*.cpp")
 
-if (NOT LIBDIR)
-    set(LIBDIR "src")
-endif()
-
 add_library(${TARGET} ${FIREBOLT_LIBRARY_TYPE}
     Types.cpp
     Module.cpp
@@ -49,7 +45,7 @@ target_include_directories(${TARGET}
     PRIVATE
         $<BUILD_INTERFACE:${GENERATED_CODE_PATH}/include>
         $<BUILD_INTERFACE:${GENERATED_CODE_PATH}/src>
-        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
 )
 
@@ -73,7 +69,7 @@ InstallHeaders(TARGET ${TARGET} HEADERS . NAMESPACE ${FIREBOLT_NAMESPACE} DESTIN
 InstallHeaders(TARGET ${TARGET} EXCLUDE_ROOT_DIR HEADERS . NAMESPACE ${FIREBOLT_NAMESPACE}
     SOURCE ${GENERATED_CODE_PATH}/include DESTINATION ${FIREBOLT_NAMESPACE}/generated)
 InstallHeaders(TARGET ${TARGET} HEADERS . NAMESPACE ${FIREBOLT_NAMESPACE}
-    SOURCE ${CMAKE_SOURCE_DIR}/include DESTINATION ${FIREBOLT_NAMESPACE})
+    SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../include DESTINATION ${FIREBOLT_NAMESPACE})
 
 InstallLibraries(TARGET ${TARGET} ${FIREBOLT_LIBRARY_TYPE} LIBDIR ${LIBDIR} LIBRARIES ${TARGET} DESTINATION ${FIREBOLT_NAMESPACE})
 InstallCMakeConfig(TARGETS ${TARGET})
